Align Byline left correctly on large screen

--- a/src/css/global-footer/_byline.scss
+++ b/src/css/global-footer/_byline.scss
@@ -6,6 +6,6 @@
   padding-top: $padding-top-byline;
 
   @media (min-width: $breakpoint-full) {
-    margin-left: (- $width-supplement-outer);
+    margin-left: (- ($width-supplement + $width-gap-large));
   }
 }
